css/style.css
@import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500");

/*
font = "Raleway", sans-serif
blue color = #3498db
*/

/* --------------- RESET --------------- */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    background-color: #fff;
    color: #444;
    font-family: "Raleway", sans-serif;
    font-weight: 300;
    font-size: 20px;
    text-rendering: optimizeLegibility;
    overflow-x: hidden;
}

section {
    padding: 105px 0px;
}

/* -------------- REUSABLE --------------- */

.row {
    max-width: 1140px;
    margin: 0 auto;
}

.float {
    float: left;
}

.top-and-bottom {
    padding-top: 100px;
    padding-bottom: 100px;
}

/* Grouping */

.group:after,
.group:before {
    content: "";
    display: table;
}

.group:after {
    clear: both;
}

/* Grid */

.span-1-of-3 {
    width: 32.2%;
}

.col {
	display: block;
	float:left;
	margin: 1% 0 1% 1.6%;
}

.col:first-child { 
    margin-left: 0; 
}

.section {
	clear: both;
}

/* -------------- HEADINGS --------------- */

h1 {
    text-transform: uppercase;
    font-size: 350%;
    font-weight: 200;
    letter-spacing: 3px;
}

h3 {
    text-transform: uppercase;
    font-weight: 400;
}

/* -------------- PARAGRAPHS ------------- */

p {
    font-size: 16px;
    line-height: 150%;
}

/* -------------- Main Page -------------- */

/* Header */

.header-mainpage {
    color: #fff;
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/earth.jpg);
    background-size: cover;
    background-position: top;
    height: 500px;
    background-attachment: fixed;
}

.header-mainpage h1 {
    padding-top: 120px;
    text-align: center;
}

.header-mainpage h1 a {
    text-decoration: none;
    color: inherit;
}

/* Main Navigation */

.header-mainpage .main-nav {
    padding-top: 50px;
    text-align: center;
}

.header-mainpage .main-nav li {
    display: inline-block;
    margin-right: 50px;
}

.header-mainpage .main-nav li:last-child {
    margin-right: 0;
}

.header-mainpage .main-nav li a {
    font-size: 90%;
    text-decoration: none;
    color: inherit;
}

/* Intro Section */ 

.section-intro {
    background-color: #efefef;
}

.section-intro p {
    padding: 0 15%;
}

/* News Cards */

.news-card {
    position: relative;
    height: 485px;
    width: 28%;
    margin: 1% 0 1% 8%;
    border-radius: 15px;
    background-color: #efefef;
    box-shadow: 0px 3px 15px -3px #a1a1a1;
}

.news-card:last-child {
    margin-right: 0;
}

.news-card img {
    width: 100%;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
}

.news-card h4 {
    padding: 20px 20px 0 20px;
    font-weight: 500;
}

.news-card p {
    padding: 0 20px;
    margin-top: 20px;
}

.news-card .btn {
    position: absolute;
    bottom: 0;
    width: 100%;
    padding: 20px 0;
    text-align: center;
    text-decoration: none;
    font-size: 80%;
    color: #fff;
    background-color: #3498db;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
    transition: background-color 0.3s;
}

.news-card .btn:hover,
.news-card .btn:active {
    background-color: #51a7e0;
}

/* --------------- OWEN --------------- */

.cardimage {
    width: 100%;
}

.float {
    float: left;
}

/* ----------- Headers ----------- */

.header-evidence,
.header-causes,
.header-solutions{
    background: #033f67;
    height: 200px;
    padding: 50px;
}

.header-evidence div,
.header-causes div,
.header-solutions div {
    display: inline-block;
    color: black;
}

.header-evidence nav,
.header-causes nav,
.header-solutions nav {
    color: black;
    text-decoration-style: none;
    font-size: 30px;
    display: inline-block;
}

.header-evidence h1,
header-causes h1,
.header-solutions h1 {
    display: inline-block;
}

.header-evidence nav ul,
.header-solutions nav ul {
    list-style-type: none;
}

.header-evidence nav ul li,
.header-causes nav ul li,
.header-solutions nav ul li{
    display: inline-block;
    color: aqua;
    text-decoration: none;
    padding: 20px;
}

/* --------------- Evidence Page ------------ */
.evidence-top-image {
    background-image: url(../img/ice.jpg);
    background-size: cover;
    height: 300px;
}

.bulk {
    background-color: #efefef;
    margin: 0;
    align-content: center;
    padding-top: 2%;
}


.evidence {
    background-color: #ffffff;
    margin-left: 10%;
    margin-right: 10%;
    margin-top: 2.5%;
    margin-bottom: 2.5%;
    align-content: center;
    width: 30%;
    height: 700px;
    border-bottom-left-radius: 10%;
    border-bottom-right-radius: 10%;
}

.evidence h3 {
    text-align: center;
    padding-top: 5px;
}

.evidence p {
    padding: 20px;
}

/* ------------- Causes Page ------------- */

.causes-intro {
    background-color: #ffffff;
    padding: 20px;
    padding-bottom: 40px;
}

.causes-ghg {
    background-color: #efefef;
    padding: 20px;
    padding-bottom: 40px;
}
.causes-intro article h3,
.causes-


.causes-intro article p,
.causes-ghg p {
    padding-left: 20px
}

.causes-bottom-image {
    background-image: url(../img/oil3.jpg);
    background-size: cover;
    height: 400px;
    margin: 0;
}

/* --------------- Solutions Page -----------*/

.solutions-top-image {
    
}

.solutions-intro {
    background: #efefef; 
    padding-top: 100px;
    padding-bottom: 100px;
    
}

.solutions-section {
    background-color: #ffffff;
    padding-top: 100px;
    padding-bottom: 100px;
}

.worldhand


/* --------------- Footer --------------- */

footer {
    height: 80px;
    background-color: #444;
}

footer .row {
    position: relative;
}

.footer-nav {
    float: left;
    position: absolute;
    left: 0;
    top: 27px;
}

.footer-nav li {
    display: inline-block;
    margin-right: 50px;
}

.footer-nav li:last-child {
    margin-right: 0;
}

.footer-nav li a {
    font-size: 70%;
    text-decoration: none;
    color: #aaa;
    font-weight: 00;
    transition: color 0.3s;
}

.footer-nav li a:hover,
.footer-nav li a:active {
    color: #ccc;
}

footer p {
    color: #aaa;
    font-size: 65%;
    position: absolute;
    right: 0;
    top: 30.5px;
}

